@@ -125,14 +125,18 @@ add_to_global (struct link_map *new)
     {
       /* We have to extend the existing array of link maps in the
 	 main map.  */
+      size_t new_size = ns->_ns_global_scope_alloc;
+      if (new_size >= 256 && new_size > to_add + 8)
+	new_size *= 2;
+      else
+	new_size += to_add + 8;
       new_global = (struct link_map **)
 	realloc (ns->_ns_main_searchlist->r_list,
-		 ((ns->_ns_global_scope_alloc + to_add + 8)
-		  * sizeof (struct link_map *)));
+		 new_size * sizeof (struct link_map *));
       if (new_global == NULL)
 	goto nomem;
 
-      ns->_ns_global_scope_alloc += to_add + 8;
+      ns->_ns_global_scope_alloc = new_size;
       ns->_ns_main_searchlist->r_list = new_global;
     }
 
